--- a/junior-career.html
+++ b/junior-career.html
@@ -582,38 +582,62 @@
       <circle cx="12" cy="13" r="4"></circle>
     </svg>
   </div>
-  <h3 style="margin: 0; color: #1b5e20; font-size: 18px; letter-spacing: 1px; text-transform: uppercase; font-weight: 900;">Junior Career Gallery (16 Photos)</h3>
+  <h3 style="margin: 0; color: #1b5e20; font-size: 18px; letter-spacing: 1px; text-transform: uppercase; font-weight: 900;">Junior Career Gallery</h3>
 </div>
 
-     <div style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 12px;">
-      <img src="https://lh3.googleusercontent.com/d/1kUFqUexNjY3lvhMw7rPsEmTMgVsvrGbR" onclick="popupJrGallery(0)" style="width:100%; height:120px; object-fit:cover; object-position:top; border-radius:8px; cursor:pointer; transition: transform 0.2s; box-shadow: 0 2px 5px rgba(0,0,0,0.1);" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'" alt="Joshua Hong Junior Career Image 9" title="Joshua Hong Junior Career Image 9" loading="lazy" decoding="async">
-      <img src="https://lh3.googleusercontent.com/d/1IqCMgvk7V8AuhkJhJnGqYaV39tvOllUM" onclick="popupJrGallery(1)" style="width:100%; height:120px; object-fit:cover; object-position:center 15%; border-radius:8px; cursor:pointer; transition: transform 0.2s; box-shadow: 0 2px 5px rgba(0,0,0,0.1);" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'" alt="Joshua Hong Junior Career Image 10" title="Joshua Hong Junior Career Image 10" loading="lazy" decoding="async">
-      <img src="https://lh3.googleusercontent.com/d/1FJJwsIL3C1NEdU4dJeb6smfxQd0a0ouP" onclick="popupJrGallery(2)" style="width:100%; height:120px; object-fit:cover; object-position:center 55%; border-radius:8px; cursor:pointer; transition: transform 0.2s; box-shadow: 0 2px 5px rgba(0,0,0,0.1);" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'" alt="Joshua Hong Junior Career Image 11" title="Joshua Hong Junior Career Image 11" loading="lazy" decoding="async">
-      <img src="https://lh3.googleusercontent.com/d/11_jXXuy-vjwHs-QvBAdBPOFqV4ss4FpV" onclick="popupJrGallery(3)" style="width:100%; height:120px; object-fit:cover; object-position:center 55%; border-radius:8px; cursor:pointer; transition: transform 0.2s;" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'" alt="Joshua Hong Junior Career Image 12" title="Joshua Hong Junior Career Image 12" loading="lazy" decoding="async">
-      <img src="https://lh3.googleusercontent.com/d/1wQUkMMPZRWKAcV3s7bH3lXIUHO7KQcPU" onclick="popupJrGallery(4)" style="width:100%; height:120px; object-fit:cover; object-position:center 30%; border-radius:8px; cursor:pointer;" alt="Joshua Hong Junior Career Image 13" title="Joshua Hong Junior Career Image 13" loading="lazy" decoding="async">
-      <img src="https://lh3.googleusercontent.com/d/1CPl_yA8fN5tptbunyMGaOqo71THzl82z" onclick="popupJrGallery(5)" style="width:100%; height:120px; object-fit:cover; border-radius:8px; cursor:pointer;" alt="Joshua Hong Junior Career Image 14" title="Joshua Hong Junior Career Image 14" loading="lazy" decoding="async">
-      <img src="https://lh3.googleusercontent.com/d/1aR2s2b2Az_tsV0UoRIPE0V9dj_SY05Nc" onclick="popupJrGallery(6)" style="width:100%; height:120px; object-fit:cover; border-radius:8px; cursor:pointer;" alt="Joshua Hong Junior Career Image 15" title="Joshua Hong Junior Career Image 15" loading="lazy" decoding="async">
-      <img src="https://lh3.googleusercontent.com/d/1fVzAzv6aAfSrUkSV-q42TILbEelkAWiQ" onclick="popupJrGallery(7)" style="width:100%; height:120px; object-fit:cover; object-position:left 5%; border-radius:8px; cursor:pointer;" alt="Joshua Hong Junior Career Image 16" title="Joshua Hong Junior Career Image 16" loading="lazy" decoding="async">
-      <img src="https://lh3.googleusercontent.com/d/1o4GgblC9pMcZSQaBhRXonEvxG_CzFfAH" onclick="popupJrGallery(8)" style="width:100%; height:120px; object-fit:cover; object-position:top; border-radius:8px; cursor:pointer;" alt="Joshua Hong Junior Career Image 17" title="Joshua Hong Junior Career Image 17" loading="lazy" decoding="async">
-      <img src="https://lh3.googleusercontent.com/d/1KZXxeONuu3xPdiWUtmvofSgC4Zqz2Hk_" onclick="popupJrGallery(9)" style="width:100%; height:120px; object-fit:cover; border-radius:8px; cursor:pointer;" alt="Joshua Hong Junior Career Image 18" title="Joshua Hong Junior Career Image 18" loading="lazy" decoding="async">
-      <img src="https://lh3.googleusercontent.com/d/1pjez52n31-EtRUIzEi5SROgefsmGSvdo" onclick="popupJrGallery(10)" style="width:100%; height:120px; object-fit:cover; object-position:center 30%; border-radius:8px; cursor:pointer;" alt="Joshua Hong Junior Career Image 19" title="Joshua Hong Junior Career Image 19" loading="lazy" decoding="async">
-      <img src="https://lh3.googleusercontent.com/d/1_pCv0hofMD4NffVsKXF-_9QfY_hqG_mC" onclick="popupJrGallery(11)" style="width:100%; height:120px; object-fit:cover; object-position:top; border-radius:8px; cursor:pointer;" alt="Joshua Hong Junior Career Image 20" title="Joshua Hong Junior Career Image 20" loading="lazy" decoding="async">
-      <img src="https://lh3.googleusercontent.com/d/1Qc_Pv8gsFBae-bMk3Eudo5EnguKnP8Mg" onclick="popupJrGallery(12)" style="width:100%; height:120px; object-fit:cover; object-position:center 30%; border-radius:8px; cursor:pointer;" alt="Joshua Hong Junior Career Image 21" title="Joshua Hong Junior Career Image 21" loading="lazy" decoding="async">
-      <img src="https://lh3.googleusercontent.com/d/1yk8kSpHTCxGa725r_2eUEcoRmMgLvi2V" onclick="popupJrGallery(13)" style="width:100%; height:120px; object-fit:cover; object-position:center 25%; border-radius:8px; cursor:pointer;" alt="Joshua Hong Junior Career Image 22" title="Joshua Hong Junior Career Image 22" loading="lazy" decoding="async">
-      <img src="https://lh3.googleusercontent.com/d/1fG3zb436wgqA5OzjEiqzUyoSSnqJtEP2" onclick="popupJrGallery(14)" style="width:100%; height:120px; object-fit:cover; border-radius:8px; cursor:pointer;" alt="Joshua Hong Junior Career Image 23" title="Joshua Hong Junior Career Image 23" loading="lazy" decoding="async">
-      <img src="https://lh3.googleusercontent.com/d/1ZSkAybCXpbResui5UyzkslKxn1ewbcnH" onclick="popupJrGallery(15)" style="width:100%; height:120px; object-fit:cover; border-radius:8px; cursor:pointer;" alt="Joshua Hong Junior Career Image 24" title="Joshua Hong Junior Career Image 24" loading="lazy" decoding="async">
-    </div>
+<div style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 12px;">
+      <img src="./images/junior-year/1-joshua-hong-Club-Record-CCQ-62-Sep-2024.jpeg" onclick="popupJrGallery(0)" style="width:100%; height:120px; object-fit:cover; object-position: center 5%; border-radius:8px; cursor:pointer; transition: transform 0.2s; box-shadow: 0 2px 5px rgba(0,0,0,0.1);" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'" alt="Joshua Hong Club Record CCQ 62 Sep 2024" title="Joshua Hong Club Record CCQ 62 Sep 2024" loading="lazy" decoding="async">
+      <img src="./images/junior-year/2-Joshua-Hong-Copa-Centro-Champion-Sep-2024.jpeg" onclick="popupJrGallery(1)" style="width:100%; height:120px; object-fit:cover; object-position: center 45%; border-radius:8px; cursor:pointer; transition: transform 0.2s; box-shadow: 0 2px 5px rgba(0,0,0,0.1);" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'" alt="Joshua Hong Copa Centro Champion Sep 2024" title="Joshua Hong Copa Centro Champion Sep 2024" loading="lazy" decoding="async">
+      <img src="./images/junior-year/3-joshua-hong-Copa-Centro-Win-Maria-Alcocer-2024.jpeg" onclick="popupJrGallery(2)" style="width:100%; height:120px; object-fit:cover; object-position: center 10%; border-radius:8px; cursor:pointer; transition: transform 0.2s; box-shadow: 0 2px 5px rgba(0,0,0,0.1);" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'" alt="Joshua Hong Copa Centro Win Maria Alcocer 2024" title="Joshua Hong Copa Centro Win Maria Alcocer 2024" loading="lazy" decoding="async">
+      <img src="./images/junior-year/4-joshua-hong-San-Gil-Zona-Centro-Win-2024.jpeg" onclick="popupJrGallery(3)" style="width:100%; height:120px; object-fit:cover; object-position: center 15%; border-radius:8px; cursor:pointer; transition: transform 0.2s;" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'" alt="Joshua Hong San Gil Zona Centro Win 2024" title="Joshua Hong San Gil Zona Centro Win 2024" loading="lazy" decoding="async">
+      <img src="./images/junior-year/5-Joshua-Hong-Copa-Pacifico-Win-2024.jpeg" onclick="popupJrGallery(4)" style="width:100%; height:120px; object-fit:cover; object-position: center 43%; border-radius:8px; cursor:pointer;" alt="Joshua Hong Copa Pacifico Win 2024" title="Joshua Hong Copa Pacifico Win 2024" loading="lazy" decoding="async">
+      <img src="./images/junior-year/6-joshua-hong-Club-Guadalajara-Anual-2024.jpeg" onclick="popupJrGallery(5)" style="width:100%; height:120px; object-fit:cover; object-position: center 25%; border-radius:8px; cursor:pointer;" alt="Joshua Hong Club Guadalajara Anual 2024" title="Joshua Hong Club Guadalajara Anual 2024" loading="lazy" decoding="async">
+      <img src="./images/junior-year/7-Joshua-Hong-UTSA-Sigend-Nov-2024.jpeg" onclick="popupJrGallery(6)" style="width:100%; height:120px; object-fit:cover; object-position: center 60%; border-radius:8px; cursor:pointer;" alt="Joshua Hong UTSA Signed Nov 2024" title="Joshua Hong UTSA Signed Nov 2024" loading="lazy" decoding="async">
+      <img src="./images/junior-year/8-joshua-hong-Tailhade-Argentina-2024.jpeg" onclick="popupJrGallery(7)" style="width:100%; height:120px; object-fit:cover; object-position: center 39%; border-radius:8px; cursor:pointer;" alt="Joshua Hong Tailhade Argentina 2024" title="Joshua Hong Tailhade Argentina 2024" loading="lazy" decoding="async">
+      <img src="./images/junior-year/9-Joshua-Hong-Copa-Sur-Win-2025.jpeg" onclick="popupJrGallery(8)" style="width:100%; height:120px; object-fit:cover; object-position: center 15%; border-radius:8px; cursor:pointer;" alt="Joshua Hong Copa Sur Win 2025" title="Joshua Hong Copa Sur Win 2025" loading="lazy" decoding="async">
+      <img src="./images/junior-year/10-Joshua-Hong-Junior-Toyota-Golf-Worldcup-Qualify-2025.jpeg" onclick="popupJrGallery(9)" style="width:100%; height:120px; object-fit:cover; object-position: center 20%; border-radius:8px; cursor:pointer;" alt="Joshua Hong Junior Toyota Golf Worldcup Qualify 2025" title="Joshua Hong Junior Toyota Golf Worldcup Qualify 2025" loading="lazy" decoding="async">
+      <img src="./images/junior-year/11-Joshua-Hong-Junior-America-Cup-Inauguration-2025.jpeg" onclick="popupJrGallery(10)" style="width:100%; height:120px; object-fit:cover; object-position: center 60%; border-radius:8px; cursor:pointer;" alt="Joshua Hong Junior America Cup Inauguration 2025" title="Joshua Hong Junior America Cup Inauguration 2025" loading="lazy" decoding="async">
+      <img src="./images/junior-year/12-Joshua-Hong-Junior-America-Cup-Team-Green-2025.jpeg" onclick="popupJrGallery(11)" style="width:100%; height:120px; object-fit:cover; object-position: center 10%; border-radius:8px; cursor:pointer;" alt="Joshua Hong Junior America Cup Team Green 2025" title="Joshua Hong Junior America Cup Team Green 2025" loading="lazy" decoding="async">
+      <img src="./images/junior-year/13-Joshua-Hong-Junior-America-Cup-with-Andres-Manllo-2025.jpeg" onclick="popupJrGallery(12)" style="width:100%; height:120px; object-fit:cover; object-position: center 40%; border-radius:8px; cursor:pointer;" alt="Joshua Hong Junior America Cup with Andres Manllo 2025" title="Joshua Hong Junior America Cup with Andres Manllo 2025" loading="lazy" decoding="async">
+      <img src="./images/junior-year/14-Joshua-Hong-Toyota-Golf-Worldcup-2025.jpeg" onclick="popupJrGallery(13)" style="width:100%; height:120px; object-fit:cover; object-position: center 70%; border-radius:8px; cursor:pointer;" alt="Joshua Hong Toyota Golf Worldcup 2025" title="Joshua Hong Toyota Golf Worldcup 2025" loading="lazy" decoding="async">
+      <img src="./images/junior-year/15-joshua-hong-Interzona-2025.jpeg" onclick="popupJrGallery(14)" style="width:100%; height:120px; object-fit:cover; object-position: center 25%; border-radius:8px; cursor:pointer;" alt="Joshua Hong Interzona 2025" title="Joshua Hong Interzona 2025" loading="lazy" decoding="async">
+      <img src="./images/junior-year/16-Joshua-Hong-Campeonato-Parejas-Win-Leonardo-Lavalle-2025.jpeg" onclick="popupJrGallery(15)" style="width:100%; height:120px; object-fit:cover; object-position: center 40%; border-radius:8px; cursor:pointer;" alt="Joshua Hong Campeonato Parejas Win Leonardo Lavalle 2025" title="Joshua Hong Campeonato Parejas Win Leonardo Lavalle 2025" loading="lazy" decoding="async">
+      <img src="./images/junior-year/17-Joshua-Hong-Toyota-Golf-Worldcup-Qualify-Win-2025.jpeg" onclick="popupJrGallery(16)" style="width:100%; height:120px; object-fit:cover; object-position: center 20%; border-radius:8px; cursor:pointer;" alt="Joshua Hong Toyota Golf Worldcup Qualify Win 2025" title="Joshua Hong Toyota Golf Worldcup Qualify Win 2025" loading="lazy" decoding="async">
+      <img src="./images/junior-year/18-Joshua-Hong-City-Qro-Megazine-Interview.jpeg" onclick="popupJrGallery(17)" style="width:100%; height:120px; object-fit:cover; object-position: center 15%; border-radius:8px; cursor:pointer;" alt="Joshua Hong City Qro Magazine Interview" title="Joshua Hong City Qro Magazine Interview" loading="lazy" decoding="async">
+      <img src="./images/junior-year/19-joshua-hong-Billy-Dettlaff-Sportsmanship-Award-The-Jr-Players-2024.jpeg" onclick="popupJrGallery(18)" style="width:100%; height:120px; object-fit:cover; object-position: center 15%; border-radius:8px; cursor:pointer;" alt="Joshua Hong Billy Dettlaff Sportsmanship Award The Jr Players 2024" title="Joshua Hong Billy Dettlaff Sportsmanship Award The Jr Players 2024" loading="lazy" decoding="async">
+      <img src="./images/junior-year/20-joshua-hong-Nacional-Conade-Olympic-Silver-Medal-2024.jpeg" onclick="popupJrGallery(19)" style="width:100%; height:120px; object-fit:cover; object-position: center 37%; border-radius:8px; cursor:pointer;" alt="Joshua Hong Nacional Conade Olympic Silver Medal 2024" title="Joshua Hong Nacional Conade Olympic Silver Medal 2024" loading="lazy" decoding="async">
+      <img src="./images/junior-year/21-Joshua-Hong-NCJGC-Bumgadner-Memorial-Jr-Win-2023.jpeg" onclick="popupJrGallery(20)" style="width:100%; height:120px; object-fit:cover; object-position: center 42%; border-radius:8px; cursor:pointer;" alt="Joshua Hong NCJGC Bumgadner Memorial Jr Win 2023" title="Joshua Hong NCJGC Bumgadner Memorial Jr Win 2023" loading="lazy" decoding="async">
+      <img src="./images/junior-year/22-Joshua-Hong-Selection-Mexico-2024.jpeg" onclick="popupJrGallery(21)" style="width:100%; height:120px; object-fit:cover; object-position: center 15%; border-radius:8px; cursor:pointer;" alt="Joshua Hong Selection Mexico 2024" title="Joshua Hong Selection Mexico 2024" loading="lazy" decoding="async">
+      <img src="./images/junior-year/23-Joshua-Hong-Selection-Mexico-Gabriel-Derbez-Lucca-Buenlostro-2025.jpeg" onclick="popupJrGallery(22)" style="width:100%; height:120px; object-fit:cover; object-position: center 15%; border-radius:8px; cursor:pointer;" alt="Joshua Hong Selection Mexico Gabriel Derbez Lucca Buenlostro 2025" title="Joshua Hong Selection Mexico Gabriel Derbez Lucca Buenlostro 2025" loading="lazy" decoding="async">
+      <img src="./images/junior-year/24-Joshua-Hong-Campeonato-Pareja-Zona-Centro-Leonardo-Lavalle-2025.jpeg" onclick="popupJrGallery(23)" style="width:100%; height:120px; object-fit:cover; object-position: center 15%; border-radius:8px; cursor:pointer;" alt="Joshua Hong Campeonato Pareja Zona Centro Leonardo Lavalle 2025" title="Joshua Hong Campeonato Pareja Zona Centro Leonardo Lavalle 2025" loading="lazy" decoding="async">
+</div>
 
-  <script>
+<script>
     const jrImages = [
-      "https://lh3.googleusercontent.com/d/1kUFqUexNjY3lvhMw7rPsEmTMgVsvrGbR", "https://lh3.googleusercontent.com/d/1IqCMgvk7V8AuhkJhJnGqYaV39tvOllUM",
-      "https://lh3.googleusercontent.com/d/1FJJwsIL3C1NEdU4dJeb6smfxQd0a0ouP", "https://lh3.googleusercontent.com/d/11_jXXuy-vjwHs-QvBAdBPOFqV4ss4FpV",
-      "https://lh3.googleusercontent.com/d/1wQUkMMPZRWKAcV3s7bH3lXIUHO7KQcPU", "https://lh3.googleusercontent.com/d/1CPl_yA8fN5tptbunyMGaOqo71THzl82z",
-      "https://lh3.googleusercontent.com/d/1aR2s2b2Az_tsV0UoRIPE0V9dj_SY05Nc", "https://lh3.googleusercontent.com/d/1fVzAzv6aAfSrUkSV-q42TILbEelkAWiQ",
-      "https://lh3.googleusercontent.com/d/1o4GgblC9pMcZSQaBhRXonEvxG_CzFfAH", "https://lh3.googleusercontent.com/d/1KZXxeONuu3xPdiWUtmvofSgC4Zqz2Hk_",
-      "https://lh3.googleusercontent.com/d/1pjez52n31-EtRUIzEi5SROgefsmGSvdo", "https://lh3.googleusercontent.com/d/1_pCv0hofMD4NffVsKXF-_9QfY_hqG_mC",
-      "https://lh3.googleusercontent.com/d/1Qc_Pv8gsFBae-bMk3Eudo5EnguKnP8Mg", "https://lh3.googleusercontent.com/d/1yk8kSpHTCxGa725r_2eUEcoRmMgLvi2V",
-      "https://lh3.googleusercontent.com/d/1fG3zb436wgqA5OzjEiqzUyoSSnqJtEP2", "https://lh3.googleusercontent.com/d/1ZSkAybCXpbResui5UyzkslKxn1ewbcnH"
+      "./images/junior-year/1-joshua-hong-Club-Record-CCQ-62-Sep-2024.jpeg",
+      "./images/junior-year/2-Joshua-Hong-Copa-Centro-Champion-Sep-2024.jpeg",
+      "./images/junior-year/3-joshua-hong-Copa-Centro-Win-Maria-Alcocer-2024.jpeg",
+      "./images/junior-year/4-joshua-hong-San-Gil-Zona-Centro-Win-2024.jpeg",
+      "./images/junior-year/5-Joshua-Hong-Copa-Pacifico-Win-2024.jpeg",
+      "./images/junior-year/6-joshua-hong-Club-Guadalajara-Anual-2024.jpeg",
+      "./images/junior-year/7-Joshua-Hong-UTSA-Sigend-Nov-2024.jpeg",
+      "./images/junior-year/8-joshua-hong-Tailhade-Argentina-2024.jpeg",
+      "./images/junior-year/9-Joshua-Hong-Copa-Sur-Win-2025.jpeg",
+      "./images/junior-year/10-Joshua-Hong-Junior-Toyota-Golf-Worldcup-Qualify-2025.jpeg",
+      "./images/junior-year/11-Joshua-Hong-Junior-America-Cup-Inauguration-2025.jpeg",
+      "./images/junior-year/12-Joshua-Hong-Junior-America-Cup-Team-Green-2025.jpeg",
+      "./images/junior-year/13-Joshua-Hong-Junior-America-Cup-with-Andres-Manllo-2025.jpeg",
+      "./images/junior-year/14-Joshua-Hong-Toyota-Golf-Worldcup-2025.jpeg",
+      "./images/junior-year/15-joshua-hong-Interzona-2025.jpeg",
+      "./images/junior-year/16-Joshua-Hong-Campeonato-Parejas-Win-Leonardo-Lavalle-2025.jpeg",
+      "./images/junior-year/17-Joshua-Hong-Toyota-Golf-Worldcup-Qualify-Win-2025.jpeg",
+      "./images/junior-year/18-Joshua-Hong-City-Qro-Megazine-Interview.jpeg",
+      "./images/junior-year/19-joshua-hong-Billy-Dettlaff-Sportsmanship-Award-The-Jr-Players-2024.jpeg",
+      "./images/junior-year/20-joshua-hong-Nacional-Conade-Olympic-Silver-Medal-2024.jpeg",
+      "./images/junior-year/21-Joshua-Hong-NCJGC-Bumgadner-Memorial-Jr-Win-2023.jpeg",
+      "./images/junior-year/22-Joshua-Hong-Selection-Mexico-2024.jpeg",
+      "./images/junior-year/23-Joshua-Hong-Selection-Mexico-Gabriel-Derbez-Lucca-Buenlostro-2025.jpeg",
+      "./images/junior-year/24-Joshua-Hong-Campeonato-Pareja-Zona-Centro-Leonardo-Lavalle-2025.jpeg"
     ];
 
     function popupJrGallery(index) {
@@ -676,7 +700,7 @@
       popup.document.write(htmlContent);
       popup.document.close();
     }
-  </script>
+</script>
 
      <div style="text-align: center; border-top: 1px solid #eee; padding: 30px 20px 60px 20px;">
   <p style="color: #cbd5e1; font-size: 10px; font-weight: 400; letter-spacing: -0.2px; margin-bottom: 8px;">
