--- a/code/index-upcoming-ready.html
+++ b/code/index-upcoming-ready.html
@@ -14,6 +14,48 @@
 <link rel="canonical" href="https://www.joshuahonggolf.com/index.html">
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-H1JW8YBDZ8"></script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Joshua Hong",
+  "birthDate": "2007",
+  "gender": "Male",
+  "nationality": [
+    {
+      "@type": "Country",
+      "name": "Mexico"
+    },
+    {
+      "@type": "Country",
+      "name": "South Korea"
+    }
+  ],
+  "jobTitle": "Collegiate Golfer",
+  "memberOf": {
+    "@type": "SportsTeam",
+    "name": "UTSA Men's Golf",
+    "parentOrganization": {
+      "@type": "CollegeOrUniversity",
+      "name": "University of Texas at San Antonio",
+      "abbreviation": "UTSA"
+    }
+  },
+  "description": "NCAA Division I golfer at UTSA. Two-time FMG National Junior Champion (2023-2025) and three-time consecutive Regional Champion across Zona GADO and Zona Centro.",
+  "award": [
+    "FMG National Junior Championship Winner (2023-2024 Season)",
+    "FMG National Junior Championship Winner (2024-2025 Season)",
+    "Zona GADO Regional Season Champion (2021-2022)",
+    "Zona GADO Regional Season Champion (2022-2023)",
+    "Zona Centro Regional Season Champion (2024-2025)",
+    "Billy Dettlaff Sportsmanship Award (The Junior Players Championship)"
+  ],
+  "knowsAbout": ["Competitive Golf", "NCAA Division I Athletics"],
+  "url": "https://joshuahonggolf.com"
+}
+</script>
+    
 <script>
 window.dataLayer = window.dataLayer || [];
 function gtag(){dataLayer.push(arguments);}
@@ -1464,8 +1506,8 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
   <h3 style="margin: 0; color: #5f6368; font-size: 13px; text-transform: uppercase; letter-spacing: 2px; font-weight: 700;">AI-Powered Profile Overview</h3>
 </div>
     
-   <div style="font-size: 16px; color: #3c4043; line-height: 1.8; border-left: 5px solid #0c2340; padding: 25px; background-color: #f8fafc; border-radius: 0 15px 15px 0; text-align: justify; word-break: keep-all;">
-  Joshua Hong won the <b>FMG National Junior Championship</b> in Mexico in <b>back-to-back years</b>, a result that had not previously occurred in the championship’s history. He is a member of the <b>UTSA Men’s Golf program</b>. With a Korean-Mexican background, Joshua transitioned to competitive golf after participating in other high-performance sports. His development has followed a <b>structured training and competition pathway</b> within the collegiate golf environment.
+<div style="font-size: 16px; color: #3c4043; line-height: 1.8; border-left: 5px solid #0c2340; padding: 25px; background-color: #f8fafc; border-radius: 0 15px 15px 0; text-align: justify; word-break: keep-all;">
+  <b>Joshua Hong (b. 2007)</b> is a <b>Korean-Mexican collegiate golfer</b> competing in <b>NCAA Division I</b> at the <b>University of Texas at San Antonio (UTSA)</b>. He entered the <b>UTSA men’s golf program in 2025</b>. Before beginning his collegiate career, he won the <b>FMG National Junior Championship</b> in Mexico in the <b>2023–2024 and 2024–2025 seasons</b>. Both titles were determined by <b>cumulative season-long performance</b>. He also won <b>regional season championships</b> in multiple competitive zones. He won the <b>Zona GADO</b> regional season title in <b>2021–2022 and 2022–2023</b>, and the <b>Zona Centro</b> regional season title in <b>2024–2025</b>. Each title was awarded based on <b>aggregate results</b> over the course of the season. Prior to specializing in golf, he participated in <b>tennis and baseball</b>.
 </div>
 
     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(160px, 1fr)); gap: 12px; margin-top: 30px;">
