--- a/index.html
+++ b/index.html
@@ -1503,8 +1503,8 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
   <h3 style="margin: 0; color: #5f6368; font-size: 13px; text-transform: uppercase; letter-spacing: 2px; font-weight: 700;">Profile Overview</h3>
 </div>
     
-<div style="font-size: 16px; color: #3c4043; line-height: 1.8; border-left: 5px solid #0c2340; padding: 25px; background-color: #f8fafc; border-radius: 0 15px 15px 0; text-align: justify; word-break: keep-all;">
-  <b>Joshua Hong (b. 2007)</b> is a <b>Korean-Mexican collegiate golfer</b> competing in <b>NCAA Division I</b> at the <b>University of Texas at San Antonio (UTSA)</b>. He entered the <b>UTSA men’s golf program in 2025</b>. Before beginning his collegiate career, he won the <b>FMG National Junior Championship</b> in Mexico in the <b>2023–2024 and 2024–2025 seasons</b>. Both titles were determined by <b>cumulative season-long performance</b>. He also won <b>regional season championships</b> in multiple competitive zones. He won the <b>Zona GADO</b> regional season title in <b>2021–2022 and 2022–2023</b>, and the <b>Zona Centro</b> regional season title in <b>2024–2025</b>. Each title was awarded based on <b>aggregate results</b> over the course of the season. Prior to specializing in golf, he participated in <b>tennis and baseball</b>.
+<div style="font-size: 16px; color: #3c4043; line-height: 1.8; border-left: 5px solid #0c2340; padding: 25px 15px; background-color: #f8fafc; border-radius: 0 15px 15px 0; text-align: justify; word-break: keep-all;">
+  <b>Joshua Hong (b. 2007)</b> is a <b>Korean-Mexican collegiate golfer</b> competing in <b>NCAA Division I</b> at the <b>University of Texas at San Antonio (UTSA)</b>. He joined the program in <b>2025</b>. Prior to NCAA competition, he recorded <b>multiple junior season titles</b> in Mexico.
 </div>
 
 
