--- a/index.html
+++ b/index.html
@@ -1101,7 +1101,7 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
           <h3 style="font-size: 22px; color: #94a3b8; margin: 0; font-weight: 800;">Performance Archive</h3>
         </div>
 
-        <div style="font-size: 14px; line-height: 1.7; color: #efefef; border-left: 4px solid #94a3b8; padding-left: 25px; font-style: italic; text-align: left;">
+        <div style="font-size: 15px; line-height: 1.7; color: #efefef; border-left: 4px solid #94a3b8; padding-left: 25px; text-align: left;">
           <p style="margin: 0 0 18px 0; color: #fff; font-weight: 700; font-style: normal; font-size: 17px;">Fall Review & Strategic Focus</p>
           <p style="margin-bottom: 18px;">The Patriot All-America Invitational served as a competitive reference point against a national amateur field, including several of the top collegiate players. Following the event, a technical review identified <strong>long-iron performance</strong> as an area for improvement ahead of Spring qualifying.</p>
           <p style="margin-bottom: 18px;">In coordination with the UTSA coaching staff, a short-term adjustment was approved for Joshua to remain on campus and continue <strong>individual training during January</strong> rather than participate in the scheduled team trip.</p>
